deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-go-service
  labels:
    app.kubernetes.io/name: sample-go-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: enterprise-kubernetes-delivery-platform
    app.kubernetes.io/version: 0.0.0
spec:
  type: ClusterIP
  selector:
    app: sample-go-service
  ports:
    - name: http
      port: 80
      targetPort: http
