deploy/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-go-service-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sample-go-service
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
